--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^11.8.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
